# Ml_HomeWorks

./: .gitignore  build.gradle  in  settings.gradle
gradle/wrapper/: gradle-wrapper.properties
knn/: KNN.java  Main.java  build.gradle
knn/math/: Dot.java  Minkowski.java
knn/src/main/java/com/github/swanwarp/ifmoml/knn/: KNN.java  Main.java
knn/src/main/java/com/github/swanwarp/ifmoml/knn/math/: Manhattan.java  Metric.java  Minkowski.java
knn/src/main/java/com/github/swanwarp/ifmoml/knn/utils/: Pair.java  Util.java
knn/utils/: CPair.java
ml2/: README.md  ml2.cabal  stack.yaml
ml2/src/: HW2.hs
ml2/src/HW2/: CSVTransformer.hs  Gradient.hs  Plotter.hs
ml3/: LICENSE  README.md  ml3.cabal
ml3/app/: Main.hs
ml3/src/: Bayes.hs  Mail.hs
ml5/: README.md  cabal.config  ml5.cabal  non-parametric.csv  stack.yaml
ml5/src/: DataWorker.hs  Kernels.hs  Metrics.hs  Plotter.hs  Regression.hs  RegressionTrain.hs  Spline.hs
ml6/: README.md  ml6.cabal
ml6/src/: Neuro.hs
ml6/src/Mnist/: MnistReader.hs
