name:                ml2
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/faerytea/ml2#readme
license:             BSD3
license-file:        LICENSE
author:              Valery
maintainer:          faerytea@gmail.com
copyright:           2017 Valery
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     HW2.CSVTransformer
                     , HW2.Plotter
                     , HW2
                     , HW2.Gradient
  build-depends:       base >= 4.7 && < 5
                     , easyplot == 1.0
  default-language:    Haskell2010

executable ml2
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml2
  default-language:    Haskell2010
