name:                ml3
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/faerytea/ml3#readme
license:             BSD3
license-file:        LICENSE
author:              Valery
maintainer:          faerytea@gmail.com
copyright:           2017 Valery
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Bayes
  build-depends:       base >= 4.7 && < 5
                     , mtl
  default-language:    Haskell2010

executable ml3
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml3
  default-language:    Haskell2010

--source-repository head
--  type:     git
--  location: https://github.com/faerytea/ml3
