name:                ml5
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/faerytea/ml5#readme
license:             BSD3
license-file:        LICENSE
author:              Valery
maintainer:          faerytea@gmail.com
copyright:           2017 Valery
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Regression
                     , DataWorker
                     , RegressionTrain
                     , Plotter
                     , Spline
  other-modules:       Kernels
                     , Metrics
  build-depends:       base >= 4.7 && < 5
                     , array >= 0.5.1.0 && < 0.6
                     , easyplot == 1.0
  default-language:    Haskell2010

executable ml5
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml5
  default-language:    Haskell2010

test-suite ml5-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ml5
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/faerytea/ml5
