name:                ml6
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/faerytea/ml6#readme
license:             BSD3
license-file:        LICENSE
author:              Valery
maintainer:          faerytea@gmail.com
copyright:           2017 Valery
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Mnist.MnistReader
                     , Neuro
  build-depends:       base >= 4.7 && < 5
                     , binary == 0.8.*
                     , JuicyPixels == 3.2.*
                     , bytestring == 0.10.8.*
                     , mtl == 2.2.*
                     , containers == 0.5.7.*
                     , array == 0.5.*
  default-language:    Haskell2010

executable ml6
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , ml6
  default-language:    Haskell2010

test-suite ml6-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , ml6
                     , hspec
                     , QuickCheck
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/faerytea/ml6
